# godot-production-toolkit

./: .gitignore  AGENTIC_INTERFACE_REVIEW.md  AI_REVIEW_PACKAGE.md  CHANGELOG.md  CLI_AUTOMATION_REVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  PROJECT_OVERVIEW.md  README.md  RESEARCH_SUMMARY.md  SECURITY.md  SUPPORT.md  agent-interface.schema.json  llms.txt  oss-review-evidence.json  project-metadata.json  project_health_snapshot.py  pyproject.toml  resolve_publish_package.py  tool-manifest.schema.json  verify_agent_interfaces.py  verify_cli_smoke.py  verify_release_alignment.py  verify_tool_manifests.py
gdscript-api-comment-coverage/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent-tool.json  pyproject.toml  tool-manifest.json
gdscript-api-comment-coverage/docs/: AGENTIC_USAGE.md  AUTOMATION.md  CI.md  COMMENT_CONVENTIONS.md  CONFIGURATION.md  GENERATED_DOCS.md  LIMITATIONS.md
gdscript-api-comment-coverage/tests/: test_cli.py  test_coverage.py  test_parser.py  test_reporting.py
godot-asset-pipeline-doctor/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent-tool.json  pyproject.toml  tool-manifest.json
godot-asset-pipeline-doctor/docs/: AGENTIC_USAGE.md  AUDIO_ASSETS.md  AUTOMATION.md  CI.md  CONFIGURATION.md  MOBILE_TEXTURES.md  PIXEL_ART.md  RULE_REFERENCE.md  SPRITE_MANIFESTS.md  TROUBLESHOOTING.md
godot-asset-pipeline-doctor/tests/: test_cli.py  test_import_parser.py  test_png_inspector.py  test_rules.py  test_scanner.py
godot-content-graph-doctor/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  tool-manifest.json
godot-content-graph-doctor/docs/: AUTOMATION.md
godot-content-graph-doctor/tests/: test_content_graph.py
godot-export-preset-doctor/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent-tool.json  pyproject.toml  tool-manifest.json
godot-export-preset-doctor/docs/: AGENTIC_USAGE.md  ANDROID_RELEASE_CHECKLIST.md  AUTOMATION.md  CI.md  CONFIGURATION.md  RULE_REFERENCE.md  SECURITY_GUIDE.md  TROUBLESHOOTING.md
godot-export-preset-doctor/tests/: test_cli.py  test_matrix_diff.py  test_preset_parser.py  test_reporting.py  test_rules.py
godot-gdscript-architecture-guard/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  tool-manifest.json
godot-gdscript-architecture-guard/docs/: AUTOMATION.md
godot-gdscript-architecture-guard/tests/: test_architecture_guard.py
godot-input-map-auditor/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent-tool.json  pyproject.toml  tool-manifest.json
godot-input-map-auditor/docs/: AGENTIC_USAGE.md  AUTOMATION.md  CI.md  DEVICE_RULES.md  GENERATED_OUTPUT.md  POLICY_FILES.md  RULE_REFERENCE.md  TOUCH_READINESS.md
godot-input-map-auditor/tests/: test_audit.py  test_cli.py  test_parser.py  test_reporting.py
godot-localization-qa-guard/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent-tool.json  pyproject.toml  tool-manifest.json
godot-localization-qa-guard/docs/: AGENTIC_USAGE.md  AUTOMATION.md  CI.md  CSV_GUIDE.md  PLACEHOLDERS.md  PO_GUIDE.md  PSEUDO_LOCALIZATION.md  RULE_REFERENCE.md  SCANNING.md  TROUBLESHOOTING.md
godot-localization-qa-guard/tests/: test_audit.py  test_capture_plan.py  test_csv_parser.py  test_po_parser.py  test_pseudo.py  test_reporting_cli.py  test_stress.py  test_usage_scanner.py
godot-mobile-perf-doctor/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent-tool.json  pyproject.toml  tool-manifest.json
godot-mobile-perf-doctor/docs/: ADB.md  AGENTIC_USAGE.md  AUTOMATION.md  CI.md  CONFIGURATION.md  RENDERERS.md  RULE_REFERENCE.md  STATIC_CHECKS.md  TEXTURES.md
godot-mobile-perf-doctor/examples/: adb-summary.txt
godot-mobile-perf-doctor/tests/: test_adb_parser.py  test_audit.py  test_cli.py  test_project_settings.py  test_textures.py
godot-mobile-ui-doctor/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  tool-manifest.json
godot-mobile-ui-doctor/docs/: AUTOMATION.md  METADATA.md  RULE_REFERENCE.md
godot-mobile-ui-doctor/tests/: test_mobile_ui_doctor.py
godot-pack-mod-doctor/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  tool-manifest.json
godot-pack-mod-doctor/docs/: AUTOMATION.md
godot-pack-mod-doctor/tests/: test_pack_mod_doctor.py
godot-production-doctor/: CHANGELOG.md  README.md  pyproject.toml  tool-manifest.json
godot-production-doctor/docs/: AUTOMATION.md
godot-production-doctor/tests/: test_cli.py
godot-project-doctor/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent-tool.json  pyproject.toml  tool-manifest.json
godot-project-doctor/docs/: AGENTIC_USAGE.md  AUTOMATION.md
godot-project-doctor/examples/: godot-project-doctor.toml
godot-project-doctor/tests/: test_cli.py
godot-release-dashboard-kit/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  tool-manifest.json
godot-release-dashboard-kit/docs/: AUTOMATION.md
godot-runtime-telemetry-lab/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  tool-manifest.json
godot-save-schema-guard/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent-tool.json  pyproject.toml  tool-manifest.json
godot-scenario-report-kit/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  tool-manifest.json
godot-scene-signal-auditor/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent-tool.json  pyproject.toml  tool-manifest.json
godot-visual-smoke-test-kit/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent-tool.json  pyproject.toml  tool-manifest.json
pixel-space-asset-toolkit/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent-tool.json  pyproject.toml  tool-manifest.json
(+436 files in other folders)
