[project]
name = "godot-production-toolkit"
version = "0.1.2"
description = "CI-friendly production diagnostics for Godot 4 projects."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Godot Production Toolkit contributors" }]
keywords = [
  "godot",
  "godot4",
  "gamedev",
  "ci",
  "github-actions",
  "qa",
  "sarif",
  "mobile",
  "localization",
  "pixel-art",
  "content-validation",
  "scenario-testing",
  "gdscript",
  "refactor-safety",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[tool.godot-production-toolkit]
tool_count = 19
umbrella_cli = "godot-project-doctor"
github_action = "godot-ci-doctor-action"
repository_description = "CI-friendly production diagnostics for Godot 4 projects."
repository_topics = [
  "godot",
  "godot4",
  "gamedev",
  "ci",
  "github-actions",
  "python",
  "sarif",
  "mobile",
  "localization",
  "pixel-art",
  "testing",
  "qa",
  "content-validation",
  "scenario-testing",
  "gdscript",
  "refactor-safety",
]

[tool.ruff]
line-length = 120
target-version = "py311"
