[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-asset-pipeline-doctor"
version = "0.1.10"
description = "CI-friendly Godot PNG, sprite, audio, icon, and .import checks for pixel-art and mobile asset pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Godot Asset Pipeline Doctor contributors" }
]
keywords = ["godot", "gamedev", "assets", "pixel-art", "ci", "android", "png"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "Pillow>=12.2.0,<14",
]

[project.urls]
Homepage = "https://github.com/NonniGB/godot-production-toolkit/tree/main/godot-asset-pipeline-doctor"
Issues = "https://github.com/NonniGB/godot-production-toolkit/issues"

[project.scripts]
godot-asset-doctor = "godot_asset_doctor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
