[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-export-preset-doctor"
version = "0.1.11"
description = "CI-friendly Godot export preset, build target, exported folder, and generated PCK manifest checks."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Godot Export Preset Doctor contributors" }]
keywords = ["godot", "export", "android", "pck", "pack", "ci", "release", "gamedev"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/NonniGB/godot-production-toolkit/tree/main/godot-export-preset-doctor"
Issues = "https://github.com/NonniGB/godot-production-toolkit/issues"

[project.scripts]
godot-export-doctor = "godot_export_doctor.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
