[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-gdscript-architecture-guard"
version = "0.1.1"
description = "Check Godot GDScript module boundaries, autoload access, dependency direction, and architecture drift."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Godot GDScript Architecture Guard contributors" }]
keywords = ["godot", "gdscript", "architecture", "autoload", "signals", "ci", "gamedev"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/NonniGB/godot-production-toolkit/tree/main/godot-gdscript-architecture-guard"
Issues = "https://github.com/NonniGB/godot-production-toolkit/issues"

[project.scripts]
godot-architecture-guard = "godot_architecture_guard.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
