[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-localization-qa-guard"
version = "0.1.0"
description = "CI-friendly localization QA for Godot CSV and PO translation files."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Godot Localization QA Guard contributors" }]
keywords = ["godot", "localization", "translation", "i18n", "ci", "gamedev"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Internationalization",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/example/godot-localization-qa-guard"
Issues = "https://github.com/example/godot-localization-qa-guard/issues"

[project.scripts]
godot-l10n-guard = "godot_l10n_guard.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
