[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-mobile-ui-doctor"
version = "0.1.15"
description = "Check Godot mobile UI metadata for safe areas, touch targets, text overflow, localized layout risk, overlays, and readiness reports."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Godot Mobile UI Doctor contributors" }]
keywords = ["godot", "mobile", "ui", "touch", "safe-area", "localization", "gamedev", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = ["Pillow>=10,<13"]

[project.urls]
Homepage = "https://github.com/NonniGB/godot-production-toolkit/tree/main/godot-mobile-ui-doctor"
Issues = "https://github.com/NonniGB/godot-production-toolkit/issues"

[project.scripts]
godot-mobile-ui-doctor = "godot_mobile_ui_doctor.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
