[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-pack-mod-doctor"
version = "0.1.3"
description = "Generate and validate Godot pack, DLC, and mod manifests before release."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Godot Pack Mod Doctor contributors" }]
keywords = ["godot", "mods", "dlc", "pck", "content-pack", "gamedev", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/NonniGB/godot-production-toolkit/tree/main/godot-pack-mod-doctor"
Issues = "https://github.com/NonniGB/godot-production-toolkit/issues"

[project.scripts]
godot-pack-mod-doctor = "godot_pack_mod_doctor.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
