[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-project-doctor"
version = "0.1.0"
description = "Umbrella CLI that plans, runs, and summarizes CI-friendly Godot production checks."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Godot Project Doctor contributors" }]
keywords = ["godot", "ci", "gamedev", "qa", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/NonniGB/godot-production-toolkit/tree/main/godot-project-doctor"
Issues = "https://github.com/NonniGB/godot-production-toolkit/issues"

[project.scripts]
godot-project-doctor = "godot_project_doctor.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
