[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-release-dashboard-kit"
version = "0.1.12"
description = "Build static workflow-filtered release dashboards with typed report highlights and previous-run readiness trends."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Godot Release Dashboard Kit contributors" }]
keywords = ["godot", "dashboard", "release", "qa", "workflow", "filter", "baseline", "gamedev", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/NonniGB/godot-production-toolkit/tree/main/godot-release-dashboard-kit"
Issues = "https://github.com/NonniGB/godot-production-toolkit/issues"

[project.scripts]
godot-release-dashboard = "godot_release_dashboard_kit.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
