[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-runtime-telemetry-lab"
version = "0.1.2"
description = "Summarize and compare Godot runtime telemetry, frame budgets, and scenario performance evidence."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Godot Runtime Telemetry Lab contributors" }]
keywords = ["godot", "telemetry", "performance", "profiler", "gamedev", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/NonniGB/godot-production-toolkit/tree/main/godot-runtime-telemetry-lab"
Issues = "https://github.com/NonniGB/godot-production-toolkit/issues"

[project.scripts]
godot-telemetry-lab = "godot_runtime_telemetry_lab.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
