[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-save-schema-guard"
version = "0.1.8"
description = "Validate Godot save-game fixtures, generate schema samples, compare migration outputs, and catch compatibility drift before release."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Godot Save Schema Guard contributors" }]
keywords = ["godot", "save", "schema", "json", "migration", "fixtures", "ci", "gamedev"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/NonniGB/godot-production-toolkit/tree/main/godot-save-schema-guard"
Issues = "https://github.com/NonniGB/godot-production-toolkit/issues"

[project.scripts]
godot-save-guard = "godot_save_guard.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
